sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:11: error: ':' expected but ')' found.
def backMinus(indSorted){
                       ^AlgInsertionSort:26: error: identifier expected but '}' found.
}
^